# int3nts

./: .gitignore  CONTRIBUTING.md  README.md  flake.nix  solana.nix
.claude/: CLAUDE.md  rules.md
.claude/commands/: check-ci.md  checkme.md  commit.md  create-pr.md  docdebt.md  plan-continue.md  plan-create.md  review-commit-tasks.md  review-me.md  techdebt.md
.cursor/: plan.md  rules  test-summary.sh
.github/: pull_request_template.md
.github/workflows/: e2e-reusable.yml  e2e_tests.yml  unit-tests-reusable.yml  unit_tests.yml
.taskmaster/docs/: README.md  codestyle-testing.md  security-checklist.md
chain-clients/: README.md  extension-checklist.md
chain-clients/common/: Cargo.toml
chain-clients/evm/: Cargo.toml
chain-clients/evm/src/: client.rs  lib.rs  types.rs
chain-clients/evm/tests/: evm_client_tests.rs
chain-clients/mvm/: Cargo.toml
chain-clients/mvm/src/: client.rs  lib.rs  types.rs
chain-clients/mvm/tests/: mvm_client_hub_tests.rs  mvm_client_tests.rs
chain-clients/svm/: Cargo.toml
chain-clients/svm/src/: client.rs  lib.rs  types.rs
chain-clients/svm/tests/: svm_client_tests.rs
coordinator/: .gitignore  Cargo.toml  README.md
coordinator/config/: coordinator.template.toml
coordinator/src/: lib.rs  main.rs  mvm_client.rs  svm_client.rs
coordinator/src/api/: generic.rs  mod.rs  negotiation.rs
coordinator/src/config/: mod.rs
coordinator/src/monitor/: generic.rs  hub_mvm.rs  inflow_generic.rs  inflow_mvm.rs  inflow_svm.rs  mod.rs  outflow_evm.rs  outflow_generic.rs  outflow_mvm.rs  outflow_svm.rs
coordinator/src/storage/: draftintents.rs  mod.rs
coordinator/tests/: COMPLETENESS.md  api_tests.rs  config_tests.rs  extension-checklist.md  helpers.rs  helpers_mock_server.rs  mod.rs  monitor_tests.rs  mvm_client_tests.rs  negotiation_validation_tests.rs  readiness_evm_tests.rs  storage_tests.rs  svm_client_tests.rs
docs/: README.md  checklist-guide.md  codestandards.md  docs-guide.md  framework-extension-completeness-lists.md  framework-extension-guide.md  protocol.md
evm-intent-framework/: README.md
frontend/: README.md  package-lock.json  package.json  vitest.config.ts
integrated-gmp/: Cargo.toml  README.md
intent-frameworks/: COMPLETENESS-CHECKLIST.md  COMPLETENESS.md  EXTENSION-CHECKLIST.md  README.md  extension-checklist.md
intent-frameworks/svm/programs/intent_escrow/: Cargo.toml
intent-frameworks/svm/programs/intent_escrow/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
intent-frameworks/svm/programs/intent_escrow/tests/: cancel.rs  claim.rs  common.rs  edge_cases.rs  error_conditions.rs  expiry.rs  gmp.rs  initialization.rs  integration.rs
intent-frameworks/svm/programs/outflow-validator/: Cargo.toml
intent-frameworks/svm/programs/outflow-validator/src/: entrypoint.rs  error.rs  events.rs  instruction.rs  lib.rs  processor.rs  state.rs
intent-frameworks/svm/programs/outflow-validator/tests/: interface_tests.rs  validator_tests.rs
intent-frameworks/svm/tools/intent_escrow_cli/: Cargo.toml
intent-frameworks/svm/tools/intent_escrow_cli/src/: main.rs
move-intent-framework/: README.md
nix/: flake.nix  movement.nix
solver/: Cargo.toml  README.md
solver/config/: solver.template.toml
solver/src/: acceptance.rs  api.rs  config.rs  coordinator_gmp_client.rs  lib.rs  verifier_client.rs
solver/src/chains/: connected_evm.rs  connected_evm_client.rs  connected_mvm.rs  connected_mvm_client.rs  connected_svm.rs  connected_svm_client.rs  hub.rs  mod.rs  tx_hash.rs
solver/src/crypto/: hash.rs
solver/src/service/: inflow.rs  liquidity.rs  mod.rs  outflow.rs  signing.rs  tracker.rs
solver/tests/: COMPLETENESS.md  EXTENSION-CHECKLIST.md  acceptance_tests.rs  config_tests.rs  connected_chain_tx_template_test.rs  coordinator_gmp_client_tests.rs  evm_tests.rs  extension-checklist.md  helpers.rs  liquidity_tests.rs  mvm_tests.rs  outflow_service_tests.rs  signature_test.rs  signing_service_tests.rs  svm_tests.rs  tracker_tests.rs  tx_hash_tests.rs  verifier_client_tests.rs
solver/tests/evm/: chain_client_tests.rs
solver/tests/mvm/: chain_client_tests.rs  hub_client_tests.rs
solver/tests/svm/: chain_client_tests.rs
svm-intent-framework/: Cargo.toml  README.md
svm-intent-framework/programs/intent_escrow/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  state.rs
svm-intent-framework/programs/intent_escrow/tests/: cross_chain.rs  deposit.rs  error_conditions.rs  initialization.rs  integration.rs  scripts.rs
svm-intent-framework/scripts/: README.md  cancel-escrow.sh  claim-escrow.sh  create-escrow.sh  deploy.sh  get-escrow.sh  get-token-balance.sh  initialize.sh  test.sh
svm-intent-framework/tools/intent_escrow_cli/src/: main.rs
testing-infra/: README.md  run-all-unit-tests.sh
trusted-gmp/: .gitignore  Cargo.toml  README.md
trusted-gmp/config/: trusted-gmp.template.toml
trusted-gmp/src/: lib.rs  main.rs  native_gmp_relay.rs
trusted-gmp/src/api/: generic.rs  inflow_generic.rs  inflow_svm.rs  mod.rs  outflow_generic.rs  outflow_svm.rs
trusted-gmp/src/config/: mod.rs
trusted-gmp/src/crypto/: mod.rs
trusted-gmp/src/monitor/: generic.rs  hub_mvm.rs  inflow_generic.rs  outflow_generic.rs
trusted-gmp/src/validator/: generic.rs  inflow_generic.rs  mod.rs  outflow_generic.rs
trusted-gmp/tests/: EXTENSION-CHECKLIST.md  api_tests.rs  config_tests.rs  cross_chain_tests.rs  evm_client_tests.rs  helpers.rs  helpers_mock_server.rs  mod.rs  monitor_tests.rs  mvm_client_tests.rs  native_gmp_relay_tests.rs  svm_client_tests.rs  svm_tests.rs
trusted-gmp/tests/evm/: config_tests.rs  cross_chain_tests.rs  crypto_tests.rs  escrow_parsing_tests.rs  monitor_tests.rs  validator_fulfillment_tests.rs  validator_tests.rs
trusted-gmp/tests/hub/: event_parsing_tests.rs  validator_tests.rs
trusted-gmp/tests/mvm/: cross_chain_tests.rs  crypto_tests.rs  validator_fulfillment_tests.rs  validator_tests.rs
trusted-gmp/tests/svm/: crypto_tests.rs  escrow_parsing_tests.rs  validator_tests.rs
trusted-verifier/: Cargo.toml  README.md
verifier/: Cargo.toml  README.md
verifier/src/: lib.rs  (+1 more)
(+584 files in other folders)
