[package]
name = "solver"
version = "0.1.0"
edition = "2021"
authors = ["Intent Framework Team"]
description = "Solver tools for intent framework - signature generation and intent management"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
hex = "0.4"
borsh = "0.10"
clap = { version = "4.5", features = ["derive"] }
ethereum-types = "0.14"

# Shared chain client libraries
chain-clients-common = { path = "../chain-clients/common" }
chain-clients-mvm = { path = "../chain-clients/mvm" }
chain-clients-evm = { path = "../chain-clients/evm" }
chain-clients-svm = { path = "../chain-clients/svm" }

# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }
warp = "0.3"

# Cryptography
ed25519-dalek = "2.1.0"
base64 = "0.21"
bs58 = "0.5"
sha3 = "0.10"
solana-client = "2.3"
solana-sdk = "2.3"

# Error handling
anyhow = "1.0"

# Async runtime (for service loops)
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Random number generation (for tests)
rand = "0.8"

[dev-dependencies]
rand = "0.8"
wiremock = "0.5"
tokio = { version = "1.0", features = ["full"] }

