# SVM Intent Framework Workspace

[workspace]
members = [
    "programs/*",
    "tools/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# NOTE: blake3 must be pinned to 1.8.2 (not 1.8.3+) to avoid edition2024
# Use: cargo update -p blake3 --precise 1.8.2
# Use: cargo update -p constant_time_eq --precise 0.3.1
