[package]
name = "chain-clients-evm"
version = "0.1.0"
edition = "2021"
description = "EVM JSON-RPC client for cross-chain intent services"

[dependencies]
anyhow = "1.0"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
tokio = { version = "1.35.1", features = ["time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
wiremock = "0.5"
