[package]
name = "chain-clients-mvm"
version = "0.1.0"
edition = "2021"
description = "Move VM REST client for cross-chain intent services"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
hex = "0.4"
tokio = { version = "1.35.1", features = ["full"] }
wiremock = "0.5"
