[package]
name = "chain-clients-svm"
version = "0.1.0"
edition = "2021"
description = "Solana SVM RPC client for cross-chain intent services"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
borsh = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-program = "2.1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
wiremock = "0.5"
