[package]
name = "intent_escrow"
version = "0.1.0"
description = "Solana escrow for cross-chain intents with verifier signature verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "intent_escrow"

[features]
no-entrypoint = []
custom-heap = []
custom-panic = []
default = []

[dependencies]
solana-program = "2.1"
spl-token = { version = "6.0", features = ["no-entrypoint"] }
borsh = "0.10"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "2.1"
solana-sdk = "2.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
bincode = "1"
hex = "0.4"
rand = "0.8"
