[package]
name = "intent_escrow_cli"
version = "0.1.0"
description = "CLI utilities for the SVM intent escrow program"
edition = "2021"

[dependencies]
borsh = "0.10"
hex = "0.4"
solana-client = "2.1"
solana-sdk = "2.1"
solana-program = "2.1"
spl-token = "6.0"
intent_escrow = { path = "../../programs/intent_escrow", features = ["no-entrypoint"] }
